# AndroidxDatabinding

./: .gitignore  BUILD.bazel  README.md  build.gradle  databinding.properties  init.sh  propLoader.gradle  run_all_integration_tests.sh  run_compilation_tests.sh  update_googe3.sh
baseLibrary/: build.gradle
baseLibrarySupport/: build.gradle
compilationTests/: BUILD.bazel  build.gradle
compilationTests/gradle/wrapper/: gradle-wrapper.properties
compilationTests/src/test/java/androidx/databinding/compilationTest/: AppCompatResourcesTest.kt  BaseCompilationTest.java  CompilationResult.java  DataBindingCompilationTestCase.kt  DataBindingCompilationTestUtils.kt  InverseMethodTest.java  MultiLayoutVerificationTest.java  NonEnglishLocaleTest.kt  ObservableGetDetectionTest.kt  RecursiveObservableTest.kt  SimpleCompilationTest.java  SimpleCompilationTest.kt  TooManyLayoutsTest.kt
compilationTests/src/test/java/androidx/databinding/compilationTest/bazel/: AppCompatResourcesTest.kt  DataBindingCompilationTestCase.kt  DataBindingCompilationTestSuite.kt  InverseMethodTest.java  MultiLayoutVerificationTest.java  NonEnglishLocaleTest.kt  ObservableGetDetectionTest.kt  RecursiveObservableTest.kt  SimpleCompilationTest.kt  TooManyLayoutsTest.kt
compilationTests/src/test/resources/: app_build.gradle  commonBuildScript.gradle  module_build.gradle
compilationTests/src/test/resources/androidx/databinding/compilationTest/badJava/: RecursiveLiveData.java
compilationTests/src/test/resources/layout/: duplicate_ids.xml  duplicate_include_ids.xml  duplicate_include_vs_view_ids.xml  turkish_i_capitalization_two_way_binding.xml
compilationTests/testData/layout/: layout_with_drawable.xml  recursive_layout.xml  turkish_i_capitalization.xml
compiler/: build.gradle
compiler/src/test/java/android/databinding/: SafeUnboxingTest.java
compilerCommon/: build.gradle
exec/: build.gradle
extensions/: build.gradle  gradle.properties  settings.gradle
extensions-support/: build.gradle
extensions-support/baseAdapters/: build.gradle
extensions-support/gradle/wrapper/: gradle-wrapper.properties
extensions-support/viewbinding/: build.gradle
extensions-support/viewbinding/src/main/: AndroidManifest.xml
extensions/baseAdapters/: build.gradle
extensions/databindingKtx/: build.gradle
extensions/databindingKtx/src/main/: AndroidManifest.xml
extensions/viewbinding/: build.gradle
extensions/viewbinding/src/main/: AndroidManifest.xml
integration-tests/: ideCommonBuildScript.gradle
integration-tests-support/: ideCommonBuildScript.gradle
integration-tests-support/AppWithDataBindingInTests/app/: build.gradle
integration-tests-support/DynamicApp/: gradle.properties
integration-tests-support/DynamicApp/app/: build.gradle
integration-tests-support/DynamicApp/app/src/main/: AndroidManifest.xml
integration-tests-support/DynamicApp/featureA/: build.gradle
integration-tests-support/DynamicApp/featureA/src/main/: AndroidManifest.xml
integration-tests-support/DynamicApp/featureB/src/main/: AndroidManifest.xml
integration-tests-support/IndependentLibrary/app/: build.gradle
integration-tests-support/MultiModuleTestApp/app/: build.gradle
integration-tests-support/MultiModuleTestApp/testlibrary1/: build.gradle
integration-tests-support/MultiModuleTestApp/testlibrary2/: build.gradle
integration-tests-support/ProguardedAppWithTest/app/: build.gradle
integration-tests-support/TestApp/app/: build.gradle
integration-tests-support/ViewBindingTestApp/: build.gradle  settings.gradle
integration-tests-support/ViewBindingTestApp/src/main/: AndroidManifest.xml
integration-tests/AppWithDataBindingInTests/: settings.gradle
integration-tests/AppWithDataBindingInTests/app/: build.gradle
integration-tests/AppWithDataBindingInTests/lib/: build.gradle
integration-tests/AppWithDataBindingInTests/lib/src/main/: AndroidManifest.xml
integration-tests/DynamicApp/: build.gradle  gradle.properties  settings.gradle
integration-tests/DynamicApp/app/: build.gradle
integration-tests/DynamicApp/featureB/: build.gradle
integration-tests/IndependentLibrary/app/: build.gradle
integration-tests/KotlinTestApp/: build.gradle  gradle.properties  settings.gradle
integration-tests/KotlinTestApp/app/: build.gradle
integration-tests/KotlinTestApp/app/src/main/: AndroidManifest.xml
integration-tests/KotlinTestApp/library1/: build.gradle
integration-tests/KotlinTestApp/library1/src/main/: AndroidManifest.xml
integration-tests/LibCompileWith3.1/: README.md
integration-tests/LibCompileWith3.3/: README.md
integration-tests/LibCompileWithV1/: README.md
integration-tests/MultiModuleTestApp/: build.gradle
integration-tests/MultiModuleTestApp/app/: build.gradle
integration-tests/MultiModuleTestApp/app/libs/: lib_compiled_with_v1_agp_3_1_4.aar  lib_compiled_with_v2_agp_3_3_1.aar
integration-tests/MultiModuleTestApp/inheritedmodule/: build.gradle
integration-tests/MultiModuleTestApp/testlibrary1/: build.gradle
integration-tests/MultiModuleTestApp/testlibrary2/: build.gradle
integration-tests/ProguardedAppWithTest/app/: build.gradle
integration-tests/TestApp/app/: build.gradle
integration-tests/TestApp/app/src/androidTest/: AndroidManifest.xml
integration-tests/TestApp/app/src/main/: AndroidManifest.xml
integration-tests/ViewBindingTestApp/: build.gradle  settings.gradle
integration-tests/ViewBindingTestApp/app/: build.gradle
integration-tests/ViewBindingTestApp/app-test/: build.gradle
integration-tests/ViewBindingTestApp/app-with-features/: build.gradle
integration-tests/ViewBindingTestApp/app-with-features/src/main/: AndroidManifest.xml
integration-tests/ViewBindingTestApp/feature/: build.gradle
integration-tests/ViewBindingTestApp/lib-with-view-binding/: build.gradle
integration-tests/ViewBindingTestApp/lib-without-view-binding/: build.gradle
integration-tests/ViewBindingWithDataBindingTestApp/: build.gradle  gradle.properties  settings.gradle
integration-tests/ViewBindingWithDataBindingTestApp/app/: build.gradle
samples/BindingDemo/app/: build.gradle
(+216 files in other folders)
