load("//tools/base/bazel:bazel.bzl", "iml_module")

# managed by go/iml_to_build
iml_module(
    name = "studio.compilationTests",
    iml_files = ["db-compilationTests.iml"],
    test_class = "androidx.databinding.compilationTest.bazel.DataBindingCompilationTestSuite",
    test_data = [
        "//prebuilts/studio/sdk:build-tools/latest",
        "//prebuilts/studio/sdk:platforms/latest",
        "//prebuilts/tools/common/kotlin-plugin:Kotlin/kotlinc/build.txt",
        "//tools/data-binding:data_binding_runtime.zip",
        "//tools/adt/idea/android:test_deps.zip",
        "//tools/adt/idea/android/testData",
        "//tools/base/build-system:gradle-distrib",
        "//tools/base/build-system:studio_repo.zip",
    ] + glob(["testData/**"]),
    test_resources = ["src/test/resources"],
    test_shard_count = 2,
    test_srcs = ["src/test/java"],
    test_timeout = "long",
    visibility = ["//visibility:public"],
    # do not sort: must match IML order
    deps = [
        "//prebuilts/studio/intellij-sdk:studio-sdk",
        "//tools/adt/idea/.idea/libraries:kotlin-stdlib-jdk8",
        "//tools/base/annotations:studio.android.sdktools.android-annotations[module, test]",
        "//tools/data-binding:studio.compilerCommon[module, test]",
        "//tools/data-binding:studio.compiler[module, test]",
        "//prebuilts/tools/common/m2/repository/junit/junit/4.12:junit-4.12[test]",
        "//tools/adt/idea/.idea/libraries:Guava[test]",
        "//tools/adt/idea/.idea/libraries:truth[test]",
        "//prebuilts/tools/common/m2/repository/org/apache/commons/commons-lang3/3.3.2:commons-lang3-3.3.2[test]",
        "//prebuilts/tools/common/m2/repository/commons-io/commons-io/2.4:commons-io-2.4[test]",
        "//tools/base/testutils:studio.android.sdktools.testutils[module, test]",
        "//tools/adt/idea/android-test-framework:intellij.android.testFramework[module, test]",
        "//tools/adt/idea/adt-testutils:intellij.android.adt.testutils[module, test]",
        "//tools/adt/idea/android:intellij.android.core[module, test]",
    ],
)
